fixed hero-rightside responsiveness on tablet

--- a/src/scss/components/landing/hero/title-area/_title-area.scss
+++ b/src/scss/components/landing/hero/title-area/_title-area.scss
@@ -184,7 +184,6 @@ div.hero-subscribe-to-email-list-container {
   width: 66px;
   height: 66px;
   cursor: pointer;
-  visibility: hidden; // while rest of landing WIP
 }
 
 .navigate-to-bottom-outer-circle {
